--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "@moises/utils": "workspace:*",
     "typescript": "^5.0.3",
     "vue": "^3.2.47"
+  },
+  "devDependencies": {
+    "sass": "^1.60.0",
+    "unplugin-vue-define-options": "^1.3.2"
   }
 }
