--- a/package.json
+++ b/package.json
@@ -17,7 +17,13 @@
     "vue": "^3.2.47"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
+    "eslint": "^8.37.0",
+    "eslint-plugin-vue": "^9.10.0",
+    "recommended": "link:@vue/typescript/recommended",
     "sass": "^1.60.0",
-    "unplugin-vue-define-options": "^1.3.2"
+    "unplugin-vue-define-options": "^1.3.2",
+    "vue-eslint-parser": "^9.1.1"
   }
 }
